@@ -14,3 +14,8 @@ RELEASE NOTES:
 -Fixed bugs within the leveling system
 -Now the leveling system correctly displays amount of exp needed to get to the next level
 
+1/4/2020:
+-Added coinflip gambling function
+-Added more functions to the help method 
+-Separated coin functions into 3
+-Daily function will now also include a daily_streak
